samples/_failures_safe/1761250226_2cae01_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fe400c63.c: In function ‘main’:
./samples/SAFE/__tmp_fe400c63.c:174:5: error: expected ‘{’ at end of input
  174 |     struct
      |     ^~~~~~
./samples/SAFE/__tmp_fe400c63.c:174:5: error: expected declaration or statement at end of input
